# nffl

./: .gitignore  .gitmodules  .golangci.yaml  404.html  Cargo.toml  LICENSE  Makefile  README.md  avs_metadata.json  deny.toml  docker-compose-fastnear.yml  docker-compose.yml  go.mod  go.sum  index.html  rust-toolchain.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: build-and-push.yml  compose-fastnear-test.yml  compose-test.yml  contracts-tests.yml  deny-checks.yml  docs-deploy.yml  docs-test.yml  integration-tests.yml  unit-tests.yml
aggregator/: aggregator.go  aggregator_test.go  database.go  gen.go  message_blsagg.go  message_database.go  message_database_test.go  metrics.go  operator_registrations_inmemory.go  rest_server.go  rest_server_test.go  rollup_broadcaster.go  rollup_writer.go  rpc_server.go  rpc_server_test.go  task_blsagg.go
aggregator/blsagg/: message_blsagg.go
aggregator/cmd/: Dockerfile  main.go
aggregator/database/: database.go  database_test.go  event_listener.go  gen.go
aggregator/mocks/: chain.go  eth_client.go  message_blsagg.go  message_database.go  operator_registrations_inmemory.go  rest_aggregator.go  rollup_broadcaster.go  rpc_aggregator.go  task_blsagg.go
aggregator/rest_server/: metrics.go  server.go  server_test.go
aggregator/rpc_server/: metrics.go  server.go  server_test.go
aggregator/types/: types.go
assets/css/: styles.c1a10ddf.css
assets/js/: 00634dd8.1519c79d.js  00634dd8.441cd482.js  00634dd8.4765553c.js  00634dd8.80dc2a6a.js  00634dd8.e71edd55.js  0abe5cf2.0c60d6fa.js  0abe5cf2.14cc2a4c.js  0abe5cf2.1c9c4c31.js  0abe5cf2.4b838158.js  0abe5cf2.993292a1.js  0abe5cf2.a88f0ec0.js  0abe5cf2.ab922f0b.js  0abe5cf2.cb108219.js  1528ca82.38402a0e.js  1528ca82.fd71630f.js  17896441.7872a565.js  1e9f0879.0382b58c.js  1e9f0879.772f9621.js  (+89 more)
cli/: main.go
config-files/: aggregator-docker-compose.yaml  aggregator.yaml  operator-docker-compose.anvil.yaml  operator.anvil.yaml  operator0-docker-compose.anvil.yaml  operator1-docker-compose.anvil.yaml  plugin.anvil.yaml  relayer1-docker-compose-fastnear.yaml  relayer1-docker-compose.yaml
consumer/: consumer.go  go.mod  go.sum  main.go  queue_listener.go
contracts/: generate-go-bindings.sh
contracts/evm/test/ffi/bls-utils/: Cargo.toml
contracts/evm/test/ffi/bls-utils/src/: main.rs
contracts/near/sffl-agreement-registry/: Cargo.toml  README.md  deploy.sh  rust-toolchain.toml  test.sh
contracts/near/sffl-agreement-registry/.cargo/: config
contracts/near/sffl-agreement-registry/sandbox-rs/: Cargo.toml
contracts/near/sffl-agreement-registry/sandbox-rs/src/: tests.rs
contracts/near/sffl-agreement-registry/src/: lib.rs
core/: client.go  metricable.go  types.go  utils.go
core-rs/: Cargo.toml
core-rs/src/: lib.rs
core-rs/src/safeclient/: client.rs  mod.rs  utils.rs
core-rs/src/safeclient/mocks/: mod.rs
demo-nffl-cli/: README.md  getStorageValue.js  index.js  package.json  updateOperatorSet.js  updateStateRoot.js
deployments/: index.html
docs/: docusaurus.config.js  package-lock.json
example/: package.json
indexer/: .dockerignore  Cargo.toml  Dockerfile  FastIndexer.dockerfile  README.md  entrypoint.sh
indexer/src/: block_listener.rs  broadcaster.rs  candidates_validator.rs  configs.rs  connection.rs  errors.rs  fastnear_indexer.rs  indexer_wrapper.rs  main.rs  metrics.rs  metrics_server.rs  producer.rs  rabbit_publisher.rs  rmq_publisher.rs  types.rs
indexer/test_data/candidates/: 4reuDFZSQvNQKNTJkV8RXFNaYYoEa5qNQksb3pDPz5PF.json  7dVA5Z3B4tVN38Cr3UzfEwy9RBGBKifFkTENuy7x1rR5.json  9zwSzRUA9xH3SXoeZkS7tQXFupEJz9f5XZdNbB3sgK2b.json  AFhRAEcgFpV3SPvAQ4DF5QArCiPQgu6aSibPLCqsrvWa.json  C5CZp9z5QFKMTiH98z1QjzNXcYfYd25y2yuPZDbHc4BW.json  CjWH1HyUxFxDSFXDPecKZZw75w9rMQimPQEzZSGjeDjK.json  HKnmoD4cpBStpdWC1Mahm1NRWc4FZayjUEURzGuWpU18.json
indexer/test_data/config/: example.yaml
indexer/test_data/empty/: 2YAfMtr5BynUf83nAfSiaP4kZbVkfJh4GYhc3LXun9c8.json  3ENYZK1ntT862U2WFRCAsguGkaVxRHdAdK3wXL5KRSX8.json  4av2Knk987JHPg5iQdaExTdqw2RXy4Tsf12jhz72xHtk.json  52hrqG4EQ9m9A77q1G1RzmvY6NgWPZQL5SEFomxpEJbn.json  6jYgaudgaEYGo31GZJRhjdBDo828jZ7TR8nq6jCx46Fp.json  7eTdkrYWBt9yuXPp2WGy9nRVk9KyGw9amk6nE687Fnso.json  7kfDHRDKMrv8pzLf167PqJgafQ7f6kk8VhzrJB9uksCE.json  8j4EkjuQ2uJL7iZWVwCX3y5SipoWRNKAGJNs1rvm21qC.json  9YR6QuAV5XaYVA3GhDuckVRbvSvE5jdvaRMZKVnpYjh8.json  9fgJMxm368avswJf8CRV6oMg94Se1QoNNUAfGSPNfXAg.json  BTfyqQmRuSDUGxkyNEnDtZjvSmgQyGbaFhMebSRWiSH5.json  BqoaAPAmtQXNxfwBUQpzZWsGHkv8NCBDRM3L4EqK97Zh.json  C9f6yh9gWdMh9c4BKWBtpFaXjc6DoFiEJTZCfTSNaFFf.json
metrics/: metrics.go  noopmetrics.go
milestones/: index.html
near-lake/: Cargo.toml
offchain/: Cargo.toml  workers_config.toml
operator/: avs_manager.go  consumer.go  gen.go  metrics.go  operator.go  operator_test.go  registration.go  registration_test.go  rpc_client.go  rpc_client_test.go  rpc_client_v2_test.go
operator-rs/: Cargo.toml  Dockerfile
operator-rs/src/: config.rs  lib.rs  main.rs  operator.rs  types.rs
operator-rs/src/attestor/: event_listener.rs  mod.rs  notifier.rs
operator-rs/src/consumer/: config.rs  event_listener.rs  mod.rs  queues_listener.rs
operator-setup/: .env.example  docker-compose.yml
prometheus/: prometheus.yml
relayer/: Dockerfile  metrics.go  relayer.go
relayer-rs/: Cargo.toml  Dockerfile
relayer-rs/src/: config.rs  main.rs  metrics.rs  relayer.rs
scripts/: deposit-into-mocktoken-strategy.sh
state-root-storage-foreign/: README.md  package-lock.json  package.json  remappings.txt
static/: avs_metadata.json
tests/: utils.go
tests/e2e/e2e_tests/: Cargo.toml
tests/e2e/e2e_tests/tests/: containers.rs  ctr_availability_test.rs
types/: avs_config.go
workers/: Cargo.toml  README.md
workers/abi/: L0V2Endpoint.json
workers/src/: abi.rs  config.rs  data.rs  executor_def.rs  lib.rs  utils.rs  verifier.rs
workers/src/chain/: connections.rs  contracts.rs  mod.rs
workers/src/codec/: mod.rs  packet_v1_codec.rs
workers/src/data/: bytes_utils.rs  dvn.rs  extractors.rs  mod.rs
workers/tests/: executor_it.rs  verifier_test.rs
(+384 files in other folders)
