[workspace]

resolver = "2"

members = [
    "indexer",
    "contracts/evm/test/ffi/bls-utils",
    "workers",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/NethermindEth/near-sffl"

[workspace.dependencies]
alloy = { version = "0.4.2", features = ["full", "node-bindings", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "serde", "json-abi"] }
alloy-primitives = "0.8.3"
alloy-rpc-client = "0.4.2"
alloy-rpc-types = "0.4.2"
alloy-transport-ws = "0.4.2"
alloy-rlp = "0.3.8"
tokio = { version = "1.0", features = ["full"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.30"
eyre = "0.6"
bincode = "1.3"
serde_yaml = "0.9"
clap = "4.5.18"
tempfile = "3.10.0"
async-trait = "0.1"
log = "0.4"
core-rs = { path = "core-rs" }

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }
