[package]
name = "safeclient"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Alloy dependencies
alloy = "0.4.2"
# Mocking
mockall = "0.13.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"

# Logging
log = "0.4"

# Other potential dependencies
reqwest = { version = "0.12.8", features = ["json"] }
url = "2.3"
futures-util = "0.3.30"

[dev-dependencies]
tokio-test = "0.4"
