[package]
name = "core-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"
anyhow = { workspace = true }

alloy = { workspace = true }
mockall = "0.13.0"

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.6"

log = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
