[package]
name = "indexer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.5.1"
futures = "0.3.5"
tokio = { version = "1.28.2", features = ["sync", "time"] }
deadpool = "0.10.0"
lapin = "2.3.1"
deadpool-lapin = "0.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
prometheus = "0.13.3"

clap = { version = "4.4.11", features = ["color", "derive", "env"] }
openssl-probe = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"

tracing = { version = "0.1.36", features = ["std"] }
thiserror = "1.0.56"
anyhow = "1.0.79"

near-indexer = { git = "https://github.com/near/nearcore", rev = "37359fda087bbb3692b592d2cd07d4c705b66005" }
near-client = { git = "https://github.com/near/nearcore", rev = "37359fda087bbb3692b592d2cd07d4c705b66005" }
near-o11y = { git = "https://github.com/near/nearcore", rev = "37359fda087bbb3692b592d2cd07d4c705b66005" }
near-client-primitives = { git = "https://github.com/near/nearcore", rev = "37359fda087bbb3692b592d2cd07d4c705b66005" }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
serde_yaml = "0.9.34"

[dev-dependencies]
near-crypto = { git = "https://github.com/near/nearcore", rev = "37359fda087bbb3692b592d2cd07d4c705b66005" }
