[package]
name = "indexer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.5.1"
futures = "0.3.5"
tokio = { workspace = true }
deadpool = "0.10.0"
lapin = "2.3.1"
deadpool-lapin = "0.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
prometheus = { workspace = true }

clap = { workspace = true }
openssl-probe = "0.1.4"
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = "1.0.56"
anyhow = { workspace = true }

near-indexer = { git = "https://github.com/near/nearcore", rev = "b3d767e7664d8e123a35313ccc66c8ac1afb2058" }
near-client = { git = "https://github.com/near/nearcore", rev = "b3d767e7664d8e123a35313ccc66c8ac1afb2058" }
near-o11y = { git = "https://github.com/near/nearcore", rev = "b3d767e7664d8e123a35313ccc66c8ac1afb2058" }
near-client-primitives = { git = "https://github.com/near/nearcore", rev = "b3d767e7664d8e123a35313ccc66c8ac1afb2058" }
reqwest = { version = "0.12.7", features = ["json"] }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
serde_yaml = { workspace = true }

[dev-dependencies]
near-crypto = { git = "https://github.com/near/nearcore", rev = "b3d767e7664d8e123a35313ccc66c8ac1afb2058" }

[features]
use_fastnear = []
