[package]
name = "indexer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.5.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.5"
tokio = { version = "1", features = ["sync", "time"] }
deadpool = "0.10.0"
lapin = "2.3.1"
deadpool-lapin = "0.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
prometheus = "0.13.3"

clap = { version = "4.5.21", features = ["color", "derive", "env"] }
openssl-probe = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"

tracing = { version = "0.1.40", features = ["std"] }
thiserror = "1.0.69"
anyhow = "1.0.79"

near-indexer = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }
near-client = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }
near-o11y = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }
near-config-utils = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }
near-client-primitives = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
#reqwest = {workspace = true}
reqwest = { version = "0.12.9", features = ["json"] }

[dev-dependencies]
near-crypto = { git = "https://github.com/near/nearcore", rev = "a83c18490cf4dafaedca01458f365dc5871bd293" }

[features]
use_fastnear = []
