[package]
name = "operator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.6", features = ["full", "node-bindings", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client"] }
alloy-primitives = "0.8.3"
alloy-rpc-client = "0.3.6"
alloy-rpc-types = "0.3.6"
alloy-transport-ws = "0.3.6"
alloy-rlp = "0.3.8"
near-da-rpc = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
near-da-primitives = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
tokio = { version = "1.30", features = ["full"] }
prometheus = "0.13"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.30"
eyre = "0.6"
bincode = "1.3"
serde_yaml = "0.9.1"
clap = "4.5.18"
tempfile = "3.10.0"
hex = "0.4"
rand = "0.8"
eigensdk = { version = "0.1.0", features = ["full", "types", "crypto-bls", "utils"] }
