[package]
name = "operator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport-ws = { workspace = true }
alloy-rlp = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
eyre = { workspace = true }
bincode = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
core-rs = { workspace = true }

# Dependencies specific to operator-rs
near-da-rpc = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
near-da-primitives = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
warp = "0.3"
hex = "0.4"
rand = "0.8"
eigensdk = { version = "0.1.0", features = ["full", "types", "crypto-bls", "utils"] }
borsh = "1.5.1"
lapin = "2.3.1"
