[package]
name = "relayer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport-ws = { workspace = true }
alloy-rlp = { workspace = true }
near-da-rpc = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
near-da-primitives = { git = "https://github.com/Nuffle-Labs/data-availability", branch = "main" }
tokio = { workspace = true }
prometheus = { workspace = true }
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
eyre = { workspace = true }
bincode = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
