[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dvn"
path = "src/bin/dvn.rs"

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
alloy-json-abi = "0.8.8"
blsful = "2.5.7"
config = { version = "0.14.0", features = ["toml"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
