[package]
name = "sffl-agreement-registry"
version = "1.0.0"
authors = ["Nethermind <hello@nethermind.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = { version = "0.6.0", features = ["serde"] }
alloy-sol-macro = { version = "0.6.0", features = ["json"] }
alloy-sol-types = { version = "0.6.0", features = ["json", "eip712-serde"] }
near-sdk = { version = "4.1.1", features = ["unstable"] }
near-sdk-contract-tools = "2.1.0"
uint = { version = "0.9.3", default-features = false }

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]

[dev-dependencies]
ethers = "2.0.11"
