[package]
name = "sandbox"
version = "1.0.0"
publish = false
edition = "2021"

[dev-dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
alloy-primitives = { version = "0.6.0", features = ["serde"] }
alloy-sol-macro = { version = "0.6.0", features = ["json"] }
alloy-sol-types = { version = "0.6.0", features = ["json", "eip712-serde"] }
serde = { version = "1.0.195", features = ["derive"] }
near-workspaces = "0.9.0"
tokio = { version = "1.28.2", features = ["full"] }
k256 = "0.13.3"

[[example]]
name = "sandbox"
path = "src/tests.rs"
